// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoundingBoxSelection should match snapshot when isBoundingBoxSelectionInternal 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isBoundingBoxSelectionInternal={true}
  mapToProps={[Function]}
  selectedBoundingBoxNodes={Array []}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`BoundingBoxSelection should match snapshot when isBoundingBoxSelectionInternal is false 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isBoundingBoxSelectionInternal={false}
  mapToProps={[Function]}
  selectedBoundingBoxNodes={Array []}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
